fix: 修复多modal出现z-index错误问题，每次新开地时候强制后开在最前面

--- a/src/components/modal/style.less
+++ b/src/components/modal/style.less
@@ -112,7 +112,6 @@
 
 .uni-shadow-mask {
   position: fixed;
-  z-index: 999;
   inset: 0;
   display: none;
   justify-content: center;
